--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
+  "/mix.js": "/mix.js",
+  "/css/frontend.css": "/css/frontend.css",
   "/js/core.js": "/js/core.js",
-  "/css/app.css": "/css/app.css"
+  "/css/app.css": "/css/app.css",
+  "/js/scripts.js": "/js/scripts.js"
 }
