--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
   "/mix.js": "/mix.js",
   "/css/frontend.css": "/css/frontend.css",
+  "/css/epomimenu.css": "/css/epomimenu.css",
   "/js/core.js": "/js/core.js",
   "/css/app.css": "/css/app.css",
   "/js/scripts.js": "/js/scripts.js"
