--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "laravel-mix": "^0.8.1",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "jquery.mmenu": "^5.7.8"
   }
 }
