--- a/package.json
+++ b/package.json
@@ -15,7 +15,5 @@
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
   },
-  "dependencies": {
-    "jquery.mmenu": "^5.7.8"
-  }
+  "dependencies": {}
 }
