--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
   "/mix.js": "/mix.js",
   "/css/frontend.css": "/css/frontend.css",
   "/js/core.common.js": "/js/core.common.js",
-  "/css/core.common.css": "/css/core.common.css"
+  "/css/core.common.css": "/css/core.common.css",
+  "/js/scripts.js": "/js/scripts.js"
 }
