--- a/local/public/mix-manifest.json
+++ b/local/public/mix-manifest.json
@@ -4,8 +4,10 @@
   "../js/core.common.js": "../js/core.common.js",
   "../css/core.common.css": "../css/core.common.css",
   "../css/core.frontend.css": "../css/core.frontend.css",
+  "../css/core.backend.css": "../css/core.backend.css",
   "../js/scripts.js": "../js/scripts.js",
   "../js/core.frontend.js": "../js/core.frontend.js",
+  "../js/core.backend.js": "../js/core.backend.js",
   "../js/login.js": "../js/login.js",
   "../css/login.css": "../css/login.css"
 }
